--- a/PROG2500_A2_Chinook/PROG2500_A2_Chinook.csproj
+++ b/PROG2500_A2_Chinook/PROG2500_A2_Chinook.csproj
@@ -11,6 +11,8 @@
   <ItemGroup>
     <None Remove="Images\albums.png" />
     <None Remove="Images\artists.png" />
+    <None Remove="Images\catalog.png" />
+    <None Remove="Images\customerOrders.png" />
     <None Remove="Images\exit.png" />
     <None Remove="Images\home.png" />
     <None Remove="Images\tracks.png" />
@@ -34,6 +36,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\artists.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\catalog.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\customerOrders.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Images\exit.png">
